syntax = "proto2";
package jobsrv;
import "originsrv.proto";

enum JobGroupTrigger {
  Unknown = 0;
  Webhook = 1;
  Upload = 2;
  HabClient = 3;
  BuilderUI = 4;
}

message JobGroupSpec {
  optional string origin = 1;
  optional string package = 2;
  optional bool deps_only = 3;
  optional string target = 4;
  optional bool origin_only = 5;
  optional bool package_only = 6;
  optional JobGroupTrigger trigger = 7;
  optional uint64 requester_id = 8;
  optional string requester_name = 9;
}
enum JobGroupProjectState {
  NotStarted = 0;
  InProgress = 1;
  Success = 2;
  Failure = 3;
  Skipped = 4;
  Canceled = 5;
  NotFound = 6;
}

message JobGroupProject {
  optional string name = 1;
  optional string ident = 2;
  optional JobGroupProjectState state = 3;
  optional uint64 job_id = 4;
  optional string target = 5;
}

enum JobGroupState {
  GroupPending = 0;
  GroupDispatching = 1;
  GroupComplete = 2;
  GroupFailed = 3;
  GroupQueued = 4;
  GroupCanceled = 5;
}

message JobGroup {
  optional uint64 id = 1;
  optional JobGroupState state = 2;
  repeated JobGroupProject projects = 3;
  optional string created_at = 4;
  optional string project_name = 5;
  optional string target = 6;
}

message JobGraphPackageCreate {
  optional originsrv.OriginPackage package = 1;
}

message JobGraphPackagePreCreate {
  optional string ident = 1;
  repeated string deps = 2;
  optional string target = 3;
  repeated string build_deps = 4;
}

message JobGraphPackageReverseDependenciesGet {
  optional string origin = 1;
  optional string name = 2;
  optional string target = 3;
}

message JobGraphPackageReverseDependencies {
  optional string origin = 1;
  optional string name = 2;
  repeated string rdeps = 3;
}
