syntax = "proto2";
package originsrv;

enum OriginPackageVisibility {
  Public = 1;
  Private = 2;
  Hidden = 3;
} 
message OriginKeyIdent {
  optional string origin = 1;
  optional string revision = 2;
  optional string location = 3;
}

message OriginPackage {
  optional uint64 id = 1;
  optional uint64 owner_id = 2;
  optional string origin = 3;
  optional OriginPackageIdent ident = 4;
  optional string checksum = 5;
  optional string manifest = 6;
  repeated OriginPackageIdent deps = 7;
  repeated OriginPackageIdent tdeps = 8;
  repeated uint32 exposes = 9 [packed=true];
  optional string config = 10;
  optional string target = 11;
  optional OriginPackageVisibility visibility = 12;
  repeated OriginPackageIdent build_deps = 13;
  repeated OriginPackageIdent build_tdeps = 14;
}

message OriginPackageIdent {
  optional string origin = 1;
  optional string name = 2;
  optional string version = 3;
  optional string release = 4;
}

// Sessions

enum OAuthProvider {
  GitHub = 0;
  None = 1;
  Bitbucket = 2;
  AzureAD = 3;
  GitLab = 4;
  Okta = 5;
  ActiveDirectory = 6;
  ChefAutomate = 7;
}

message AccessToken {
    optional uint64 account_id = 1;
    optional uint32 flags = 2;
    optional int64 expires = 3;
}

enum SessionType {
  User = 0;
  Builder = 1;
}

message Session {
  optional uint64 id = 1;
  optional string email = 2;
  optional string name = 3;
  // base64 encoded binary representation of SessionToken
  optional string token = 4;
  optional uint32 flags = 5;
  optional string oauth_token = 6;
  optional SessionType session_type = 7;  // TBD - Remove this
}

message SessionToken {
  optional uint64 account_id = 1;
  optional string extern_id = 2;
  optional OAuthProvider provider = 3;
  optional bytes token = 4;
}
